feat: add new filters and enhance UI components for image processing